...
        android:src="@android:drawable/ic_menu_revert"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp" />

    <TextView
        android:id="@+id/tv_screen_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Details"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="@id/iv_back"
        app:layout_constraintBottom_toBottomOf="@id/iv_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
...
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="Phone number"
        app:expandedHintEnabled="false"
        app:layout_constraintTop_toBottomOf="@id/til_email">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_continue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="Continue"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="24dp" />
...
